scss/partials/_forms.scss
/** TABLE OF CONTENTS
 — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — /
1 - Form
  1.1 - Form Labels
  1.2 - Form Inputs - Global
2 — Inputs
  2.1 — Text Single line
  2.2 — Text Multi line
  2.3 - Radio Buttons
  2.4 - Select Dropdown
  2.5 - Radio Tab (Check/Compare Salary tool)
3 - Submitting Overlay
4 - Errors Global (needs to be last)
5 - Lead Form
X — Layout

/// END TABLE OF CONTENTS **/

/** 1 - Form
------------------------------------------------------------*/
.form {
  @extend .tk-degular-text;
  display: flex;
  flex-direction: column;
}

/* =========================
1.1 - Form Labels
========================= */

.form {
  @at-root {
    #{&}__select,
    select {
      &:focus {
        outline: none;
      }
    }
  }

  @at-root {
    label {
      @include tertiary-info();

      & ~ label {
        margin-top: 2.5rem;
      }
    }
  }

  &__button {
    margin-top: 2rem;
  }

  &--copy {
    padding-bottom: 5rem;

    &__header {
      padding-bottom: 2.7rem;
    }
  }

  &--submit-section {
    margin-bottom: 5rem;
  }
}

/* =========================
1.2 - Form Inputs - Global
========================= */

[class^="form__input-"],
input[type="text"],
input[type="email"],
input[type="url"],
input[type="num"],
input[type="tel"],
input[type="number"],
textarea {
  border: 0.2rem solid $cool-neutral-4;
  border-radius: 0;
  box-shadow: none;
  width: 100%;

  &:focus {
    outline: none;
    border: 0.2rem solid $cool-neutral-2;
  }

  &::placeholder {
    /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: $secondary-green-1;
    opacity: 1; /* Firefox */
  }

  &:-ms-input-placeholder,
  &::-ms-input-placeholder {
    /* Internet Explorer 10-11, Microsoft Edge */
    color: $secondary-green-1;
  }
}

/** 2 - Inputs
------------------------------------------------------------*/

/* =========================
2.1 - Single line
========================= */
.form {
  @at-root {
    input[type="text"],
    input[type="email"],
    input[type="url"],
    input[type="number"],
    input[type="tel"] {
      @extend .p--body;
      background: transparent;
      padding: 1.6rem;
      width: 100%;
    }
  }
}

/* =========================
2.2 - Multi line
========================= */
.form {
  @at-root {
    #{&} [class*="text-multi"],
    textarea {
      display: block;
      height: 26.8rem;
      padding: 1.2rem;
      resize: none;
      width: 100%;
    }
  }
}

/* =========================
2.3 - Radio Buttons
========================= */
form {
  // Hide native radio input
  input[type="radio"] {
    opacity: 0;
    height: 0;
    width: 0;

    & + label {
      @extend .tk-degular-text;
      @extend .p--body;

      color: $secondary-blue-1;
      // unset default form label styling
      letter-spacing: 0;
      text-transform: none;
    }

    // Create a custom radio input in ::before
    & + ::before {
      background: transparent;
      border: 0.2rem solid $cool-neutral-4;
      border-radius: 50%;
      content: "";
      display: inline-block;
      height: 2.4rem;
      margin-right: 1.3rem;
      vertical-align: bottom;
      width: 2.4rem;
      //not sure why the transition does not trigger.
      transition: all 0.2s ease-in-out;
    }

    &:checked {
      & + ::before {
        background: radial-gradient($accessible-green 40%, transparent 0%);
      }

      & + label {
        color: $primary-blue;
      }
    }
  }

  // Apply theme appropriate colors
  @include theming($themes) {
    input[type="radio"] + label {
      cursor: pointer;
      color: get-theme-value(color);

      & + ::before {
        background: get-theme-value(background-color);
      }
    }
  }
}

/* =========================
2.4 - Select Dropdown
========================= */
.form {
  @at-root {
    #{&} [class*="-select"],
    select {
      @extend .p--body;
      appearance: none;
      border: 0.2rem solid $secondary-green-2;
      border-radius: 0;
      background-image: url("data:image/svg+xml,%3Csvg width='17' height='9' viewBox='0 0 17 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.5 0.5L8.5 8.5L16.5 0.5H0.5Z' fill='%23051C2C'/%3E%3C/svg%3E%0A");
      background-color: transparent;
      background-origin: content-box;
      background-position: right 1% center;
      background-repeat: no-repeat;
      background-size: 1.6rem 0.8rem;
      color: $primary-blue;
      display: block;
      padding: 1.6rem;
      width: 100%;

      &:invalid {
        color: $secondary-green-1;
      }

      option {
        color: $secondary-green-1;
      }
    }
  }

/* =========================
2.5 - Radio Tab for Check/Compare Salary tool
========================= */
  .form {
    &--salary-radio {
      [name="form-type"] {
        display: none;
      }

      label:hover,
      [name="form-type"]:checked + label {
        border-bottom: 0.6rem solid $accessible-green;
      }

      @extend .tk-degular-text;
      color: $secondary-blue-1;
      border-bottom: 0.1rem solid $cool-neutral-4;
      display: grid;
      font-weight: 600;
      grid-template-columns: repeat(3, 1fr);
      margin-bottom: 10rem;

      label {
        @extend .tk-degular-text;

        border-right: 0.1rem solid $cool-neutral-4;
        letter-spacing: 0;
        font-size: 2rem;
        font-weight: 600;
        padding-right: 1.3rem;
        padding-left: 2rem;
        text-transform: capitalize;

        &:first-child {
          padding-top: 5rem;
        }
      }

      input[type="radio"] + label {
        padding-bottom: 1rem;
      }

      input[name="form-type"] {
        // Create a custom radio input in ::before
        & + ::before {
          @include clear-decoration();
          transition: none;
          content: none;
        }

        &:checked + ::before {
          @include clear-decoration();
          transition: none;
          content: none;
          width: 0;
        }
      }
    }
  }

  .tabs-nav__label {
    @include tertiary-info();
    margin-top: 2.5rem;
  }

/* =========================
2.6 - Dollar sign in input field
========================= */
  .form {  
    &__dollar-sign {
      display: inline-block;
      position: relative;

      &:before {
        position: absolute;
        content: "$";
        color: $secondary-green-1;
        font-size: 2rem;
        left: 1.5rem;
        top: 1.5rem;
      }

      input {
        padding-left: 2.5rem;
      }  
    }
  }

/** 3 - Submitting Overlay
------------------------------------------------------------*/
  .submit-overlay {
    background-color: rgba(255, 255, 255, 0.666);
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 1;
    text-align: center;
    margin: auto;

    &::after {
      width: 4rem;
      height: 4rem;
      background-color: $cool-neutral-2;
      -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
      animation: sk-rotateplane 1.2s infinite ease-in-out;
      position: absolute;
      margin: auto;
      text-align: center;
      top: calc(50% - 2rem);
      left: calc(50% - 2rem);
      transform: translate(-50%, -50%);
      content: "";
    }
  }

/* =========================
4 - Errors - Global
========================= */
  // Error styles need to be at the bottom
  .form {
    @at-root {
      #{&} [class*="-error-styled"],
      .error:not(span) {
        border: 0.2rem solid $product-red-3;
        color: $product-red-3;
      }
    }

    [class*="__error-message"] {
      color: $product-red-3;
    }
  }

  @at-root {
    [class*="error-message"] {
      color: $product-red-3;
      font-size: 1.8rem;
      margin: -3rem 0 3rem;
    }
  }
}

/** 5 - Lead Form and Salary Form
------------------------------------------------------------*/
/* Many of these styles will break BEM for purposes of styling
non-BEM elements created by the current lead form builder code.
That tool should be updated to use BEM in the long run, and these 
styles updated accordingly. */

.lead-form, .salary-form {
  label {
    + input,
    ~ select,
    + textarea,
    + div.form__wrapper-input {
      margin-top: 1.2rem;
      margin-bottom: 3rem;
    }
  }
}

/** X - Layout
------------------------------------------------------------*/
.form {
  &__field-wrapper {
    margin-bottom: 1.6rem;
  }

  &__submit-btn-adj-link {
    float: right;
    margin: 1.5rem 0;
  }

  &__wrapper-input {
    [class*="error-message"] {
      margin: 0;
    }
  }
}

.salary-form {
  .columns--two {
    @include breakpoint(desktop){
      column-gap: 1.5rem;
    }
  }
}

